## Process this file with automake to produce Makefile.in

ACLOCAL_M4 = $(top_srcdir)/config/aclocal.m4
AUTOHEADER = @AUTOHEADER@ --localdir=config

EXTRA_DIST =	acinclude.m4i	\
		aclocal.m4	\
		config.guess	\
		config.sub	\
		install-sh	\
		libtool.m4i	\
		ltconfig	\
		ltmain.sh	\
		missing		\
		mkinstalldirs
