## Process this file with automake to produce Makefile.in
pkgdata_DATA = \
	DUMPER-API		\
	EXCLUDE			\
	FAQ			\
	INDEXING		\
	INSTALL			\
	INTERNALS		\
	KERBEROS		\
	LABEL.PRINTING		\
	MULTITAPE		\
	PORT.USAGE		\
	RAIT			\
	RESTORE			\
	SAMBA			\
	SECURITY		\
	SYSTEM.NOTES		\
	TAPE.CHANGERS		\
	TAPETYPES		\
	UPGRADE			\
	VTAPE-API		\
	WHATS.NEW		\
	WISHLIST		\
	YEAR2000		\
	ZFTAPE

EXTRA_DIST = $(pkgdata_DATA)
