## Process this file with automake to produce Makefile.in
pkgdata_DATA = \
	DUMPER-API		\
	EVENT-API		\
	EXCLUDE			\
	FAQ			\
	HOWTO-CYGWIN.html       \
	INDEXING		\
	INSTALL			\
	INTERNALS		\
	KRB4			\
	KRB5			\
	LABEL.PRINTING		\
	MULTITAPE		\
	PORT.USAGE		\
	RAIT			\
	RESTORE			\
	SAMBA			\
	SECURITY		\
	SECURITY-API		\
	STRATEGY-API		\
	SYSTEM.NOTES		\
	TAPE.CHANGERS		\
	TAPETYPES		\
	UPGRADE			\
	VTAPE-API		\
	WHATS.NEW		\
	WISHLIST		\
	YEAR2000		\
	ZFTAPE			\
	chg-scsi.notes

EXTRA_DIST = $(pkgdata_DATA)
